<resources>

    <!--    <string name="admob_app_id">
ca-app-pub-2864521706832933~2687968123</string>
    <string name="admob_banner_id">
ca-app-pub-2864521706832933/4921058807</string> -->

    <string name="admob_app_id">
ca-app-pub-2864521706832933~2687968123</string>
    <string name="admob_banner_id">
ca-app-pub-2864521706832933/7701208388</string>

    <string name="app_name">Playnxt</string>
    <string name="Next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GetStarted">Get Started</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don’t have an account? Register Now</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="email_me_about_special_pricing">Email Me About Special Pricing</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Friends">Friends</string>
    <string name="see_all">See All</string>
    <string name="tap_to_choose_a_game">Tap to choose a game</string>
    <string name="ads_will_go_here">Ads will go here</string>
    <string name="buy_now">Buy Now</string>
    <string name="Games">Games</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="Inbox">Inbox</string>
    <string name="add">Add</string>
    <string name="Backlog">Backlog</string>
    <string name="save_list">Save list</string>
    <string name="create_new_backlog_list">Create New Backlog List</string>
    <string name="create_new_list">Create New list</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Calender">Calender</string>
    <string name="Stat">Stat</string>
    <string name="events">Events</string>
    <string name="staff_picks">Staff Picks</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="friends">Friends</string>
    <string name="inbox">Inbox</string>
    <string name="view">View</string>
    <string name="GameInfo">Game Info</string>
    <string name="add_to_backlog">Add to Backlog</string>
    <string name="add_to_wishist">Add to Wishist</string>
    <string name="XboxGames">Xbox Games</string>
    <string name="status">Status</string>
    <string name="last_update">Last update</string>
    <string name="current_status">Current Status</string>
    <string name="notes">Notes</string>
    <string name="add_new_note">Add new note</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_note_here">Enter note here</string>
    <string name="save">Save</string>
    <string name="create_new_wishlist">Create New WishList</string>
    <string name="name_your_wishlist">Name your WishList</string>
    <string name="name_your_backlog_list">Name your Backlog list</string>

    <string name="material_calendar_monday">Mo</string>
    <string name="material_calendar_tuesday">Tu</string>
    <string name="material_calendar_wednesday">We</string>
    <string name="material_calendar_thursday">Th</string>
    <string name="material_calendar_friday">Fr</string>
    <string name="material_calendar_saturday">Sa</string>
    <string name="material_calendar_sunday">Su</string>
    <string name="AddEvent">Add Event</string>
    <string name="add_game_title">Add Game Title</string>
    <string name="activity">Activity</string>
    <string name="FriendsProfile">Friends Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="EditAccount">Edit Profile</string>
    <string name="Settings">Settings</string>
    <string name="pay_now">Pay now</string>
    <string name="Addcard">Add card</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Suggestnewfeature">Suggest new feature</string>
    <string name="write_your_suggestion_here">Write your suggestion here</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="do_you_want_to_logout">Do you want to logout ?</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete account ?</string>
    <string name="delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="no_internet_connection">No internet connection</string>


    <string name="Please_enter_your_name">Please Enter your name</string>
    <string name="name_should_be_more_than_or_equal_to_3_character">Name should be more than or equal to 3 characters</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_enter_valid_email">Please Enter a Valid Email</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="password_should_be_atleast_6_digits">Password Should Be Atleast 6 Digits</string>
    <string name="Search">Search</string>
    <string name="AddGame">Add Game</string>
    <string name="Edit_event">Edit Event</string>
    <string name="AboutUs">About Us</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Calender_tool">Calender Tool</string>
    <string name="name_should_be_less_than_20_charactrs">Name should be less than 20 characters</string>
    <string name="forgot_password_link_send_successfully">Forgot password link sent successfully</string>
    <string name="We_have_sent_a_reset_password_link_to_your_register_email_address">We have sent a reset password  link to your registered email address</string>
    <string name="OK">OK</string>
    <string name="description_price"><![CDATA[Description & Price]]></string>
    <string name="welcome_to_playnxt">Welcome to Playnxt</string>
    <string name="your_premium_video_game_backlog_manager">Your premium video game backlog manager.</string>
    <string name="playnxt_button">Playnxt Button</string>
    <string name="share_app_url_string">Hey check out all the games I have in my backlog!</string>
    <string name="rate_app">Rate Playnxt!</string>
    <string name="choose_one">choose one</string>
    <string name="active_recurring_payment_payment_will_automatically_deducted_every_month">Active Recurring Payment \n (Payment will automatically deducted every month)</string>
    <string name="cancel_recurring_subscription">Cancel Recurring Subscription</string>
    <string name="buy">Buy</string>
    <string name="please_check">Please check the above terms and privacy policy</string>
</resources>