<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_gray"
    tools:context=".activity.SignupActivity"
    android:paddingBottom="24dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/sign_up_for_free"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_edit_text"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:padding="16dp"
                        android:src="@drawable/ic_profile" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_regular"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/edt_text"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:padding="13dp"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_regular"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/edt_text"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:padding="16dp"
                        android:src="@drawable/ic_password" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/nunito_regular"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/edt_text"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/password_toggle_imageView"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:padding="14dp"
                            android:src="@drawable/ic_show_password" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="start"
                    android:textAlignment="inherit"
                    android:layout_marginTop="12dp"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <CheckBox
                        android:id="@+id/cbAgree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_selector_2"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/edt_text"
                        android:textSize="12sp"
                        android:text=""/>

                    <TextView
                        android:id="@+id/tvCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textFontWeight="300"
                        android:textSize="12sp"
                        android:fontFamily="@font/nunito_extra_light"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="40dp">

                    <LinearLayout
                        android:id="@+id/btnSignup"
                        android:layout_width="130dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_button"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:gravity="center"
                            android:text="@string/signup"
                            android:textColor="@color/white"
                            android:textFontWeight="700"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunit_medium"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/app_theme"
                        android:textFontWeight="400"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.2dp"
                        android:background="@color/app_theme"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>