<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_gray"
    tools:context=".activity.BacklogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnAdsShow"
        android:orientation="vertical">

        <include
            android:id="@+id/bindingHeader"
            layout="@layout/header_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home_bottom"
        android:backgroundTint="@color/top_gray"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:id="@+id/llCreateBacklogList"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_create_new"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/create_new_backlog_list"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/ivSubscription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_subscribe_icon"
                android:visibility="gone"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/no_item_found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/edt_text_bg"/>
        </LinearLayout>


    </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnAdsShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <!-- set Banner ad position in UI layout design -->
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_id">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_button">

            <TextView
                android:id="@+id/txtBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/nunitobold"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>