<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_gray"
    tools:context=".activity.FriendsProfileActivity">

    <LinearLayout
        android:layout_above="@+id/btnAdsShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_gray"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_btn" />

                <TextView
                    android:id="@+id/tvHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:paddingBottom="8dp"
                    android:text="@string/my_profile"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_icon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_home_bottom"
            android:backgroundTint="@color/top_gray"
            android:orientation="vertical"
            android:paddingTop="16dp"
             android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvUserProfile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/m2"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitobold"
                        android:text="Smith Mathew"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:id="@+id/btnEditProfile"
                            android:layout_width="100dp"
                            android:layout_height="26dp"
                            android:background="@drawable/bg_button"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:fontFamily="@font/nunito_semi_bold"
                                android:gravity="center"
                                android:text="@string/edit_profile"
                                android:textColor="@color/white"
                                android:textFontWeight="500"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:tabTextColor="@color/white"
                    app:tabSelectedTextColor="@color/white"
                    app:tabIndicatorColor="@color/app_theme"
                    app:tabIndicatorHeight="1.5dp"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorAnimationDuration="100"
                    app:tabInlineLabel="true"
                    app:tabIndicatorAnimationMode="linear"
                    android:background="@color/top_gray"
                    android:fontFamily="@font/nunito_semi_bold"
                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                  >

                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/viewpager">

                </androidx.viewpager.widget.ViewPager>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnAdsShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <!-- set Banner ad position in UI layout design -->
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_id">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</RelativeLayout>